# goduno

./: .gitignore  Cargo.toml  README.md  build.rs  export_presets.cfg  goduno.gdnlib  project.godot
.import/: icon.png-487276ed1e3a0c39cad0279d744ee560.md5  icon.png-487276ed1e3a0c39cad0279d744ee560.stex
scenes/: main.gdns  main.tscn  scene_main.gdns  scene_main.tscn
src/: lib.rs  scene_main.rs
