[package]
name = "goduno"
version = "0.1.0"
authors = ["omerakgoz34 <omerakgoz34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "^0.9.1"

[lib]
crate-type = ["cdylib"]

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"